# franka_bot_ros

./: .gitignore  README.md
AprilTags/listen_apriltags/: package.xml  setup.py
AprilTags/listen_apriltags/listen_apriltags/: listening.py
AprilTags/listen_apriltags_interface/: CMakeLists.txt
AprilTags/listen_apriltags_interface/srv/: Location.srv
AprilTags/src/listen_apriltags/: package.xml  setup.cfg  setup.py
AprilTags/src/listen_apriltags_interface/: package.xml
CvBridge/: package.xml  setup.cfg  setup.py
CvBridge/CvBridge/: depth.py
PictureTaking/take_picture/: package.xml  setup.cfg  setup.py
PictureTaking/take_picture/config/: pcl.rviz
PictureTaking/take_picture/launch/: take_picture.launch.xml
PictureTaking/take_picture/take_picture/: photo_points.py  picture_node.py
PictureTaking/take_picture_interfaces/: CMakeLists.txt  package.xml
PictureTaking/take_picture_interfaces/msg/: Waypoint.msg  WaypointList.msg
PictureTaking/take_picture_interfaces/srv/: get_waypoints.srv
color/: package.xml  setup.cfg  setup.py
color/color/: colordetection.py
edge_map_generator/: N_points.csv  N_points.json  N_yellow_points.csv  circle_half_and_half.json  color_switch_circle_pts.json  edge_map.py  frames_2023-11-29_22.35.31.gv  gtech_blue.json  knoxville.json  maryland.json  notre_dame.json
edge_map_generator/N_color/: N_points.json  N_purple_points.csv  N_yellow_points.csv
edge_map_generator/jsons/: dartmouth.json  frames_2023-12-02_19.43.55.gv  gtech_blue.json  gtech_yellow.json  maryland.json  notre_dame.json  swarthmore.json
jsons/: gtech_yellow.json
mattagascar/: package.xml  setup.cfg  setup.py
mattagascar/mattagascar/: circle_points.csv  circle_points_many.csv  iliketomoveitmoveit.py  iliketomoveitmoveitOLD.py  newone.py  picture_points.csv
mattagascar/mattagascar/submodules/: frankastein.py  populate_msg.py
mattagascar/test/: test_state.py
waypoints/: generate_waypoints.py
waypoints/csv/: N_points.csv  N_purple_points.csv  circle_points.csv  fiona.csv  nader.csv  picture_points.csv
waypoints/jsons/: N_points.json  heart_points_half.json  knoxville.json  maryland.json  northwestern.json  notre_dame.json  swarthmore.json
(+5 files in other folders)
